[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "pyflame>=0.3.0",
    "ipython>=8.12.0",
]
lint = [
    "flake8",
    "black"
]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs"]

[tool.pdm.scripts]
test = "pytest test"
fmt = "black ."

[project]
name = "tinysearch"
dynamic = ["version"]
description = "Tiny one-phase search engine"
authors = [
    {name = "Domagoj Marsic", email = "dmars@protonmail.com"},
]
dependencies = [
    "pystemmer>=2.2.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["search", "engine"]

[project.urls]
Homepage = "https://github.com/dmarsic/tinysearch"

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend", "setuptools-git-versioning"]
build-backend = "pdm.backend"
